# gameofme

./: CMakeLists.txt  README.md  main.cpp
include/cell_automations/: cellular_automations.h  rule.h
include/cell_automaton/: cellular_automaton.hpp
include/core/: core_structures.h
include/patterns/: patterns_library.hpp
include/rules/: conway_rule.hpp  rule_base.hpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_runner.cpp
src/cell_automations/: CMakeLists.txt  cellular_automations.cpp
src/cell_automaton/: CMakeLists.txt  cellular_automaton.cpp
src/main/: CMakeLists.txt  main.cpp
src/patterns/: CMakeLists.txt  patterns_library.cpp
src/rules/: CMakeLists.txt  conway_rule.cpp  high_life_rule.cpp
